# columbus-zero

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/functions/: migrate.py
backend/functions/chat/: pyproject.toml
backend/functions/chat/src/: __init__.py  handler.py
backend/functions/destinations/src/: __init__.py  suggest.py
backend/functions/itinerary/: pyproject.toml
backend/functions/itinerary/src/: __init__.py  generate.py  get.py  update.py
backend/functions/transportation/src/: __init__.py  handler.py
backend/functions/user/src/: __init__.py  preferences.py
backend/shared/: requirements.txt
backend/shared/utils/: __init__.py  database.py
database/migrations/: 001_initial_schema.sql
database/seeds/: 001_sample_destinations.sql
docs/: API.md  ARCHITECTURE.md  COST.md
frontend/: .env.example  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Layout.tsx
frontend/src/config/: amplify.ts
frontend/src/pages/: ChatPage.tsx  GenerateItineraryPage.tsx  HomePage.tsx  ItineraryDetailPage.tsx  ProfilePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infrastructure/: cdk.context.json  cdk.json  package.json  tsconfig.json
infrastructure/lib/: config.ts
infrastructure/lib/stacks/: api-stack.ts  auth-stack.ts  compute-stack.ts  data-stack 2.ts  frontend-stack.ts  monitoring-stack.ts
scripts/: deploy.sh  run-migration.py  setup.sh
(+2 files in other folders)
