[tool.poetry]
name = "chat-function"
version = "1.0.0"
description = "Chat with AI Lambda function"
authors = ["Columbus Zero Team"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
anthropic = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
